<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutStart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <EditText
            android:id="@+id/add_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="type du quizz"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addQuestion"
            android:text="@string/s_ajouter_question" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/add_listQuestion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="creerQuizz"
            android:text="@string/s_creer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="annuler"
            android:text="@string/s_annuler" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>